Fix bug 259903: allow the user to show file extensions when saving web pages, and correctly fix up the file extension when they swap formats.